--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -804,6 +804,8 @@ figure .avatar-box {
   font-weight: var(--fw-400);
   line-height: 1.6;
 }
+.uniskill{color:  var(--white-1);
+}
 
 .timeline-item:not(:last-child)::before {
   content: "";
