--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -805,6 +805,8 @@ figure .avatar-box {
   line-height: 1.6;
 }
 .uniskill{color:  var(--white-1);
+	font-weight: var(--fw-400);
+	line-height:1.6;
 }
 
 .timeline-item:not(:last-child)::before {
