--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -804,9 +804,9 @@ figure .avatar-box {
   font-weight: var(--fw-400);
   line-height: 1.6;
 }
-.uniskill{color:  var(--white-1);
-	font-weight: var(--fw-400);
-	line-height:1.6;
+.uniskill{color: var(--light-gray);
+  font-weight: var(--fw-300);
+  line-height: 1.6;
 }
 
 .timeline-item:not(:last-child)::before {
