--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -808,6 +808,10 @@ figure .avatar-box {
   font-weight: var(--fw-300);
   line-height: 1.6;
 }
+.collegeskill{ var(--light-gray);
+  font-weight: var(--fw-300);
+  line-height: 1.6;
+}
 
 .timeline-item:not(:last-child)::before {
   content: "";
