--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,8 +58,8 @@
 
   --jet: hsl(0, 0%, 22%);
   --onyx: hsl(240, 1%, 17%);
-  --eerie-black-1: hsl(240, 2%, 13%);
-  --eerie-black-2: hsl(23%,38%,39%)
+  --eerie-black-1: hsl(24, 2%, 13%);
+  --eerie-black-2: hsl(23,38%,39%)
   --smoky-black: hsl(50%, 30%, 20%);
   --white-1: hsl(0, 0%, 100%);
   --white-2: hsl(0, 0%, 98%);
